                       User-Visible wallet Changes

wallet 0.10 (unreleased)

    Remove kaserver synchronization support.  It is no longer tested, and
    retaining the code was increasing the complexity of wallet, and some
    specific requirements (such as different realm names between kaserver
    and Kerberos v5 and the kvno handling) were Stanford-specific.  Rather
    than using this support, AFS sites running kaserver will probably find
    deploying Heimdal with its internal kaserver compatibility is probably
    an easier transition approach.

    Correctly handle storing of data that begins with a dash and don't
    parse it as an argument to wallet-backend.

    Fix logging in wallet-backend and the remctl configuration to not log
    the data passed to store.

    Add additional reports for wallet-admin list: objects owned by a
    specific ACL, objects owned by no one, objects of a specific type,
    objects with a specific flag, objects for which a specific ACL has
    privileges, ACLs with an entry with a given type and identifier, and
    ACLs with no members.

    Add a new report owners command to wallet-admin and corresponding
    report_owners() method to Wallet::Admin, which returns all ACL lines
    on owner ACLs for matching objects.

    Report ACL names as well as numbers in object history.

    Add support for Heimdal KDCs as well as MIT Kerberos KDCs.

wallet 0.9 (2008-04-24)

    The wallet command-line client now reads the data for store from a
    file (using -f) or from standard input (if -f wasn't given) when the
    data isn't specified on the command line.  The data still must not
    contain nul characters.

    Add support for enabling and disabling principals (clearing or setting
    the NOTGS flag) and examining principals to kasetkey.  This
    functionality isn't used by wallet (and probably won't be) but is
    convenient for other users of kasetkey such as kadmin-remctl.
